@@ -12,7 +12,15 @@
 	input.dom.maxlength = 15;
 	input.dom.autocomplete = 'off';
 
-	input.AddEventCallback("keypress", e => {if (e.key == "Enter") StartGame();});
+	input.AddEventCallback("keypress", e => {
+		if (e.key == "Enter") StartGame();
+	});
+
+	// Limit seed value only to alphanumeric symbols
+	input.AddEventCallback("input", e => {
+		let seed = e.currentTarget.value;
+		e.currentTarget.value = seed.replace(/[^A-Za-z0-9]/,'');
+	});
 	
 	// Set callback for updating context
 	input.AddEventCallback('input', e => {
